content/V1/Mecânicas/Talentos/Barreiras.md

# Cortinas
## Cortina Básica
**Pré-requisitos**: -.

Você pode gastar 3 pontos de EA para abrir uma cortina que cobre os céus e o solo em um raio de até 500 metros de raio por 10 minutos. Ao ativar, uma substância escura e viscosa se derrama pelos céus, e a barreira exterior toma a forma de um domo (meia esfera). O dia se torna noite e os Espíritos Amaldiçoados tendem a sair de seus esconderijos, principalmente os de grau 4 a grau 2.
- A barreira da Cortina funciona como um isolante eletromagnético, impedindo a comunicação de celulares e outros dispositivos eletrônicos entre quem está dentro com quem está fora. 
- A cortina é imune a dano psíquico, possui seu **Nível de Feiticeiro X Bônus de Proficiência** de pontos de vida, **8 + Bônus de Proficiência X Atributo de Conjuração** de CA e falha automaticamente qualquer salvaguarda. 
- Você pode gastar pontos extras na conjuração da Cortina para extender sua vida (+10HP por ponto extra) e sua duração (+1 min por ponto extra).
## Cortina Complexa
**Pré-requisitos**: Grau 2 ou superior. Cortina Básica.

Você aprimorou suas cortinas com o uso, sendo capaz de adicionar votos vinculativos que alteram as propriedades dela. Ao conjurar uma cortina, adicione uma das propriedades abaixo:
- Saída Fácil: Você desativa as defasas interiores da barreira, permitindo que criaturas saiam de dentro da cortina sem problemas. O CA das defesas exteriores aumenta em +2 e o HP total é duplicado.
- Entrada Fácil: Você desativa as defasas exteriores da barreira, permitindo que criaturas entrem na cortina sem problemas. O CA das defesas interiores aumenta em +2 e o HP total é duplicado.
- Banimento: Você impedir completamente a passagem de uma única criatura pela barreira. Caso queira que a criatura fique dentro da barreira, você também não pode sair. Caso queira que a criatura fique do lado de fora da barreira, você também não pode entrar e deve se manter a até 30m de uma das bordas da barreira.  
- Ocultação: **(Pré-requisito extra: Ocultação de Energia Amaldiçoada)** Você pode ocultar a barreira da cortina para criaturas externas. A aparência se assemelha a um espelho perfeito e toda Energia Amaldiçoada emitida internamente não é alertada para o exterior. Criaturas com o talento **Rastreador de Energia Amaldiçoada** podem fazer teste de Percepção ou detectar com Percepção Passiva. O DC em ambos os casos é um teste seu de **Furtividade + seu modificador de Carisma**.
## Cortina Independente
**Pré-requisitos**: Semi grau 1 ou superior; Cortina Básica.

Você aprendeu a criar Cortinas utilizando talismãs como catalisadores. Cortinas com talismãs custam 5 pontos de EA e tomam 1 hora em forma de ritual para conjurá-la. A cortina dura até 12 horas ou até o talismã for destruído e tem até 2,5km de raio. Você escolhe um local para fixar o talismã, ao qual deve ser visível o suficiente em seus arredores. Caso o talismã for posicionado fora da barreira o CA das defesas exteriores aumenta em +3 e o HP total é triplicado, Caso o talismã for posicionado dentro da barreira o CA das defesas interiores aumenta em +3 e o HP total é triplicado.
## Intruso de Barreiras
**Pré-requisitos**: Grau 2 ou superior.

Você consegue se esgueirar e invadir barreiras sem as quebrar:
- Enquanto fora de uma barreira, você pode fazer um teste de Sabedoria contra o DC do feiticeiro que a conjurou. A falha o impossibilita de entrar na barreira sem a quebrar, já o sucesso o permite invadir a barreira sem a romper, ainda que o feiticeiro conjurador saberá que alguém a invadiu.
- Enquanto dentro de uma barreira, você pode fazer um teste de Sabedoria contra o DC do feiticeiro que a conjurou para alterar suas propriedades. A falha o impossibilita de a modificar, já o sucesso o permite alterar seu tamanho, duração, criaturas permitidas a entrar e/ou sair ou quaisquer outras propriedades presentes nela.

## Domínio Incompleto
**Pré-requisitos**: Semi grau 1 ou superior; Técnica Inata; Gatilho.

Sem capacidade de criar um domínio e o imbuir com sua técnica, você utiliza um domínio já aberto como a barreira para sua técnica amaldiçoada.
# Anti-Domínio

## Domínio Simples
**Pré-requisitos**: -.

Como uma ação ou reação à uma rolagem de ataque ou salvaguarda que utilize EA, feitiço ou expansão de domínio, você gasta 3 pontos de EA para preencher seus entornos em um círculo de 4,5m de raio por 5 turnos. O círculo possui seu **Nível de Feiticeiro X Bônus de Proficiência** de pontos de vida. Quaisquer técnicas que atingir você ou o círculo será redirecionada para a barreira do domínio simples, reduzindo seus pontos de vida até 0.
## Emoção das Pétalas Caídas
**Pré-requisitos**: Semi grau 1 ou superior; Origem de "Clã de Feiticeiros" ou "Gênio".

Uma técnica exclusiva das famílias nobres de Feiticeiros. Você cobre todo seu corpo em Energia Amaldiçoada que contra ataca no exato momento que o acerto garantido de qualquer domínio entre na área de efeito. Como uma ação ou reação você gasta 8 pontos de EA para impedir qualquer rolagem de ataque com sucesso automático ou salvaguarda com falha automática. A técnica dura 5 turnos e não funciona contra ataques de armas brancas.
Você também pode utilizar esta técnica ofensivamente, desde que tenha equipado uma arma branca. Como uma ação que gasta 5 pontos de EA, você se envolve em Energia Amaldiçoada por 5 turnos. No momento do acerto de algum ataque, você pode usar sua reação para fazer um ataque com sua arma com vantagem. Ao acertar, o dano é considerado crítico e o tipo de dano será necrótico. Ao utilizar a reação você precisa a reativar a técnica. Caso sua EA possua dano elemental ela também altera o dano da Emoção das Pétalas Caídas.
## Cesto de Vime Oco
**Pré-requisitos**: Grau 2 ou superior.

Como uma ação, ação bônus ou reação contra o acerto garantido de um domínio, ou vendo um domínio sendo expandido, por 5 pontos de EA, você envolve um espaço circular de 4,5m de raio em volta de você por 5 turnos. Os acertos garantidos são anulados neste espaço e quaisquer criaturas a sua escolha dentro do espaço também são protegidas. A barreira não anula técnicas amaldiçoadas ou pessoas de entrarem, afetando apenas o acerto garantido.

## Amplificação de Domínio
**Pré-requisitos**: Grau 1 ou superior; Técnica Inata; Expansão de Domínio ou Domínio Incompleto.

Você aprendeu como utilizar o poder de um domínio sem usá-lo ativamente. Como uma ação, por metade da Energia Amaldiçoada que seu domínio requer, você pode cobrir seu corpo para "vestir" seu domínio a fim de neutralizar técnicas amaldiçoadas por 1 minuto. Uma vez ativado, você nega automaticamente qualquer técnica defensiva, técnica ofensiva ou magia que o afete e pode ignorar barreiras como a do infinito. Você também negará o efeito de acerto certo de um domínio se estiver dentro dele. Além disso, você não pode usar sua Técnica Inata a menos que dispense Amplificação de Domínio como uma ação bônus. Mesmo se a dispensar, você pode reativá-la como uma ação bônus por um minuto sem gastar a energia amaldiçoada novamente. Esta técnica não funciona contra Liberação Máxima de Técnica, Técnica com Entoamento e Técnica Maximum, o garantindo apenas resistência ao invés de imunidade.
# Expansão de Domínio

## Domínio Refinado
Pré-requisitos: Expansão de Domínio; 400 pontos de Refinamento.

Você ganha o poder de fortalecer ainda mais sua expansão de domínio. Você pode escolher um dos seguintes benefícios:
- **Dano Severo**: Se o seu domínio causar dano constante a todos os inimigos dentro dele, os dados de dano do seu domínio serão dobrados.
- **Efeito Perigoso**: O efeito do seu domínio é fortificado. Você pode adicionar outra condição ou aumentar a severidade do dano. Seus efeitos agora podem durar até 1 minuto ou menos.
- **Redução de Custo Suprema**: Seu domínio tornou sua manipulação de energia amaldiçoada tão refinada que sua técnica principal parece não custar nada. Enquanto estiver em seu domínio, o custo de suas técnicas é reduzido pela metade (arredondado para cima).
- **Liberação em Velocidade Relâmpago**: Seu domínio tornou suas técnicas tão rápidas que seus oponentes não conseguem nem vê-las. O custo de ação de suas técnicas será reduzido em dois enquanto seu domínio estiver ativo (Ação -> ação bônus -> ação livre). Além disso, se você usar uma técnica como uma ação livre, a jogada de ataque será com vantagem ou o alvo terá desvantagem em seu teste de resistência.
- **Multiplicação**: Seu domínio tornou sua multiplicação ainda maior do que antes. Agora você pode multiplicar sua técnica um número de vezes igual ao seu Bônus de Proficiência, com cada multiplicação pagando o custo da técnica.
- **Nova Técnica Aprimorada**: Sua técnica foi refinada à perfeição, tornando-a muito mais letal. Os dados de dano desta técnica foram dobrados.